crates/ruff_linter/src/rules/flake8_simplify/snapshots/ruff_linter__rules__flake8_simplify__tests__SIM105_SIM105_2.py.snap
---
source: crates/ruff_linter/src/rules/flake8_simplify/mod.rs
---
SIM105 [*] Use `contextlib.suppress(ValueError)` instead of `try`-`except`-`pass`
  --> SIM105_2.py:10:1
   |
 9 |   # SIM105
10 | / try:
11 | |     foo()
12 | | except ValueError:
13 | |     pass
   | |________^
help: Replace `try`-`except`-`pass` with `with contextlib.suppress(ValueError): ...`
   |
 2 ~ import contextlib
 3 |
 …
 9 | # SIM105
10 ~ with contextlib.suppress(ValueError):
   |
note: This is an unsafe fix and may change runtime behavior
