crates/ruff_linter/src/rules/flake8_simplify/snapshots/ruff_linter__rules__flake8_simplify__tests__SIM105_SIM105_3.py.snap
---
source: crates/ruff_linter/src/rules/flake8_simplify/mod.rs
---
SIM105 Use `contextlib.suppress(ValueError)` instead of `try`-`except`-`pass`
  --> SIM105_3.py:10:5
   |
10 | /     try:
11 | |         foo()
12 | |     except ValueError:
13 | |         pass
   | |____________^
   |
help: Replace `try`-`except`-`pass` with `with contextlib.suppress(ValueError): ...`
