crates/ruff_linter/src/rules/flake8_simplify/snapshots/ruff_linter__rules__flake8_simplify__tests__SIM105_SIM105_5.py_3.12.snap
---
source: crates/ruff_linter/src/rules/flake8_simplify/mod.rs
---
SIM105 [*] Use `contextlib.suppress(ValueError)` instead of `try`-`except`-`pass`
 --> SIM105_5.py:4:1
  |
3 |   # SIM105
4 | / try:
5 | |     pass
6 | | except* ValueError:
7 | |     pass
  | |________^
8 |
9 |   # SIM105
  |
help: Replace `try`-`except`-`pass` with `with contextlib.suppress(ValueError): ...`
1 | """Case: except* and except with py311 and higher"""
2 | 
3 | # SIM105
  - try:
  -     pass
  - except* ValueError:
4 + import contextlib
5 + with contextlib.suppress(ValueError):
6 |     pass
7 | 
8 | # SIM105
note: This is an unsafe fix and may change runtime behavior

SIM105 [*] Use `contextlib.suppress(ValueError)` instead of `try`-`except`-`pass`
  --> SIM105_5.py:10:1
   |
 9 |   # SIM105
10 | / try:
11 | |     pass
12 | | except ValueError:
13 | |     pass
   | |________^
   |
help: Replace `try`-`except`-`pass` with `with contextlib.suppress(ValueError): ...`
1  | """Case: except* and except with py311 and higher"""
2  | 
3  | # SIM105
4  + import contextlib
5  | try:
6  |     pass
7  | except* ValueError:
8  |     pass
9  | 
10 | # SIM105
   - try:
   -     pass
   - except ValueError:
11 + with contextlib.suppress(ValueError):
12 |     pass
note: This is an unsafe fix and may change runtime behavior
