crates/ruff_linter/src/rules/flake8_simplify/snapshots/ruff_linter__rules__flake8_simplify__tests__SIM107_SIM107.py.snap
---
source: crates/ruff_linter/src/rules/flake8_simplify/mod.rs
---
SIM107 Don't use `return` in `try`-`except` and `finally`
 --> SIM107.py:9:9
  |
7 |         return "2"
8 |     finally:
9 |         return "3"
  |         ^^^^^^^^^^
